--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<section id="game_div"></section>
 	<footer>
 		<p>
-			Demo Version. Download a Full version PDF Here.    &copy; 2023 C.Alday 
+			Demo Version. Download a <a href="Make_More_Think_Less_FREE.pdf">Full Version PDF Here</a>.    &copy; 2023 C.Alday 
 		</p>
 
 	</footer>
